// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Manuscript state factory creates abstract state 1`] = `
Object {
  "doc": Object {
    "content": Array [
      Object {
        "content": Array [
          Object {
            "content": Array [
              Object {
                "text": "A sample ",
                "type": "text",
              },
              Object {
                "marks": Array [
                  Object {
                    "type": "italic",
                  },
                ],
                "text": "text",
                "type": "text",
              },
              Object {
                "text": " with ",
                "type": "text",
              },
              Object {
                "marks": Array [
                  Object {
                    "type": "subscript",
                  },
                ],
                "text": "a",
                "type": "text",
              },
              Object {
                "text": " variety of ",
                "type": "text",
              },
              Object {
                "marks": Array [
                  Object {
                    "type": "superscript",
                  },
                ],
                "text": "tags",
                "type": "text",
              },
            ],
            "type": "paragraph",
          },
        ],
        "type": "abstract",
      },
    ],
    "type": "doc",
  },
  "selection": Object {
    "anchor": 2,
    "head": 2,
    "type": "text",
  },
}
`;

exports[`Manuscript state factory creates authors state 1`] = `
Array [
  Object {
    "_id": "unique_id",
    "email": "f.atherden@elifesciences.org",
    "firstName": "Fred",
    "lastName": "Atherden",
    "orcId": "https://orcid.org/0000-0002-6048-1470",
    "suffix": "Capt.",
  },
]
`;

exports[`Manuscript state factory creates empty keyword state 1`] = `
Object {
  "doc": Object {
    "type": "keyword",
  },
  "selection": Object {
    "anchor": 0,
    "head": 0,
    "type": "text",
  },
}
`;

exports[`Manuscript state factory creates keywords state 1`] = `
Object {
  "author-keywords": Object {
    "keywords": Array [
      Object {
        "doc": Object {
          "content": Array [
            Object {
              "text": "cerebellum",
              "type": "text",
            },
          ],
          "type": "keyword",
        },
        "selection": Object {
          "anchor": 0,
          "head": 0,
          "type": "text",
        },
      },
      Object {
        "doc": Object {
          "content": Array [
            Object {
              "text": "climbing fiber",
              "type": "text",
            },
          ],
          "type": "keyword",
        },
        "selection": Object {
          "anchor": 0,
          "head": 0,
          "type": "text",
        },
      },
      Object {
        "doc": Object {
          "content": Array [
            Object {
              "text": "reinforcement learning",
              "type": "text",
            },
          ],
          "type": "keyword",
        },
        "selection": Object {
          "anchor": 0,
          "head": 0,
          "type": "text",
        },
      },
      Object {
        "doc": Object {
          "content": Array [
            Object {
              "marks": Array [
                Object {
                  "type": "italic",
                },
              ],
              "text": "vitae",
              "type": "text",
            },
          ],
          "type": "keyword",
        },
        "selection": Object {
          "anchor": 0,
          "head": 0,
          "type": "text",
        },
      },
      Object {
        "doc": Object {
          "content": Array [
            Object {
              "text": "Purkinje cells",
              "type": "text",
            },
          ],
          "type": "keyword",
        },
        "selection": Object {
          "anchor": 0,
          "head": 0,
          "type": "text",
        },
      },
    ],
    "newKeyword": Object {
      "doc": Object {
        "type": "keyword",
      },
      "selection": Object {
        "anchor": 0,
        "head": 0,
        "type": "text",
      },
    },
    "title": undefined,
  },
  "research-organism": Object {
    "keywords": Array [
      Object {
        "doc": Object {
          "content": Array [
            Object {
              "text": "Mouse",
              "type": "text",
            },
          ],
          "type": "keyword",
        },
        "selection": Object {
          "anchor": 0,
          "head": 0,
          "type": "text",
        },
      },
    ],
    "newKeyword": Object {
      "doc": Object {
        "type": "keyword",
      },
      "selection": Object {
        "anchor": 0,
        "head": 0,
        "type": "text",
      },
    },
    "title": "Research organism",
  },
}
`;

exports[`Manuscript state factory creates title state 1`] = `
Object {
  "doc": Object {
    "content": Array [
      Object {
        "content": Array [
          Object {
            "text": "A sample ",
            "type": "text",
          },
          Object {
            "marks": Array [
              Object {
                "type": "italic",
              },
            ],
            "text": "text",
            "type": "text",
          },
          Object {
            "text": " with ",
            "type": "text",
          },
          Object {
            "marks": Array [
              Object {
                "type": "subscript",
              },
            ],
            "text": "a",
            "type": "text",
          },
          Object {
            "text": " variety of ",
            "type": "text",
          },
          Object {
            "marks": Array [
              Object {
                "type": "superscript",
              },
            ],
            "text": "tags",
            "type": "text",
          },
        ],
        "type": "article-title",
      },
    ],
    "type": "doc",
  },
  "selection": Object {
    "anchor": 1,
    "head": 1,
    "type": "text",
  },
}
`;
